<resources>
    <string name="app_name">AgendaTEC</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="privacy_policies">Políticas de Privacidad</string>
    <string name="txtcontinue">Continuar</string>
    <string name="import_data">IMPORTAR DATOS EXISTENTES</string>
    <string name="login">Iniciar Sesión</string>
    <string name="logon">Registrarse</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">¿Olvidó su Contraseña?</string>
    <string name="continueT">Continuar</string>
    <string name="loginWithoutConnection">Inicio sin Conexión</string>
    <string name="passwordVerify">Verificar Contraseña</string>
    <string name="todo">TODO</string>
    <string name="hour">HORA</string>
    <string name="hourT">AM/PM</string>
    <string name="resume">Resumen</string>
    <string name="tasks">Tareas</string>
    <string name="contacts">Contactos</string>
    <string name="config">Configuración</string>
    <string name="currentTask">Tarea Actual</string>
    <string name="wecandothisExample">We can do this!</string>
    <string name="textExample1">Apparently we had reached a great height in the atmosphere, for the…</string>
    <string name="agree">Aceptar</string>
    <string name="posponer">Posponer</string>
    <string name="currentTaskToday">Tareas Importantes de Hoy</string>
    <string name="dayExample">Lunes</string>
    <string name="dateExample">22 de Agosto</string>
    <string name="titleTask">Titulo</string>
    <string name="descriptionTask">Descripción</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="newTask">Nueva Tarea</string>
    <string name="priorityUrgent">Urgente</string>
    <string name="priorityImportant">Importante</string>
    <string name="priorityNormal">Normal</string>
    <string name="register">Registrar Tarea</string>
    <string name="date">Fecha</string>
    <string name="showCalendar">Mostrar Calendario</string>
    <string name="clean">Limpiar</string>
    <string name="hideCalendar">Ocultar Calendario</string>
    <string name="reminderTitle">Titulo del Recordatorio</string>
    <string name="taskTitle">Titulo de la Tarea</string>
    <string name="taskDesc">Descripción de la Tarea</string>
</resources>