<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity"
    android:background="@color/blueWhiteBackground">

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:id="@+id/tabFilter"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logon" />

    </android.support.design.widget.TabLayout>

    <FrameLayout
        android:id="@+id/framelogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tabFilter"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/lblDisconnected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/loginWithoutConnection"
        android:layout_below="@+id/framelogin" />

</RelativeLayout>