<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/slideViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/btnPrivacyPolicies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policies"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/dotsLayout"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnImportData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_data"
        android:background="@color/primaryBlueWhite"
        android:textColor="@color/white"
        android:layout_above="@+id/dotsLayout"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:onClick="importData"/>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtcontinue"
        android:background="@color/primaryBlueWhite"
        android:textColor="@color/white"
        android:layout_above="@+id/btnImportData"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:onClick="btnContinue"/>

</RelativeLayout>