<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainPanel.TasksFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/blueButton"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/todo" />


        <ImageView
            android:id="@+id/btnHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_help_white"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo" />

        <RelativeLayout
            android:id="@+id/layoutDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/lblDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dayExample"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_marginStart="30sp"/>

            <TextView
                android:id="@+id/lblDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateExample"
                android:textSize="30sp"
                android:layout_marginStart="15dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_below="@+id/lblDay"/>

        </RelativeLayout>

        <CalendarView
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@android:color/white"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/layoutDate"
            android:showWeekNumber="true"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="60dp"
        app:borderWidth="0dp"
        app:srcCompat="@drawable/ic_add_white"
        android:backgroundTint="@android:color/holo_orange_light"
        tools:ignore="RelativeOverlap" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvListTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calendar_view"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

</RelativeLayout>